# NBATeamAnalysis

./: .gitignore  README.md  modifyData.py  pageScrapers.py  pyproject.toml  requirements.txt  teamDataInitializers.py  teamDataScraper.py  tempData.csv
dataAnalysis/: modifyData.py  weatherGraph.py
practice/: schemaTesting.py
webScraper/: listOfAllURLs.csv  teamDataScraper.py
