[tool.poetry]
name = "nbateamanalysis"
version = "0.1.0"
description = ""
authors = ["Srinath Venkatesh <srinathvb1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
requests = "^2.27.1"
meteostat = "^1.6.1"
multiprocessing = "^2.6.2"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
